publish cross site for film view

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
     <!-- Copyright -->
     <div class="copyright">
-      <p>&#169 Oliro All Rights Reserved</p>
+      <p>&#169 Built by <span ><a class="link" href="https://geremi57.github.io/Personal-Website/">Geremi</a></span></span></p>
     </div>
   </div>
   </div>
