--- a/watch.html
+++ b/watch.html
@@ -12,10 +12,13 @@
   </div>
   <div class="vid-src container">
     <div id="iframe_test" class="col-sm">
-      <iframe
+      <!-- <iframe
         class="container"
         src="https://vidsrc.me/embed/movie?tmdb=4513"
-      ></iframe>
-
+      ></iframe> -->
+      </div>
+<script type="module" src="watch.js"></script>
+<script></script>
   </body>
+
 </html>
